# epicenter

./: EXECUTE_UNIFY_EXTENSION_LIFECYCLE.md  package.json
.claude/skills/: arktype  elysia  workspace-api
.github/workflows/: pr-preview-builds.yml  publish-tauri-releases.yml
apps/epicenter/: package.json
apps/fs-explorer/: package.json
apps/tab-manager/: package.json  wxt.config.ts
apps/tab-manager-markdown/: .gitignore  README.md  package.json  tsconfig.json
apps/whispering/: package.json  svelte.config.js  vite.config.ts  vite.overlay.config.ts
apps/whispering/src-tauri/: Cargo.toml  tauri.conf.json
apps/whispering/src-tauri/capabilities/: desktop.json  recording-overlay.json
apps/whispering/src-tauri/src/: lib.rs  overlay.rs
apps/whispering/src-tauri/src/recorder/: commands.rs  recorder.rs
apps/whispering/src-tauri/src/transcription/: mod.rs  model_manager.rs
docs/articles/: 20251231T064500-xdg-base-directory-specification.md  bearer-tokens-are-cookies-without-the-cookie-jar.md  bracket-access-on-const-tuples.md  bun-compile-is-57mb-because-its-not-your-code.md  expect-equal-compile-time-drift-detection.md  home-dotfiles-beat-xdg-for-developer-tools.md  tauri-bun-dual-backend-architecture.md  the-server-starts-the-client-not-the-other-way-around.md  why-epicenter-split-into-hub-and-local-servers.md  wrap-only-what-throws.md
docs/specs/: 20260218T172212-tab-manager-markdown-export.md  20260223T070755-multi-conversation-ai-chat.md
specs/: 20251206T094835 mic-test-feature.md  20251214T120000-transcribe-rs-0.2.0-upgrade.md  20251214T180000-moonshine-addition-whispercpp-disable.md  20251221T000000-moonshine-integration-handoff.md  20251221T120000-language-settings-redesign.md  20260109T140700-opencode-integration-architecture.md  20260115T100800-contract.md  20260115T102836-ai-generated-local-first-apps.md  20260116T082500-schema-migration-patterns.md  20260213T005300-encrypted-workspace-storage.md  20260213T030000-encrypted-api-key-vault.md  20260215T174700-symmetric-v-all-tables.md  20260217T094400-table-level-document-api.md  20260218T211400-markdown-persistence-extension.md  20260219T094400-migrate-filesystem-to-document-binding.md  20260220T080000-plugin-first-server-architecture.md  20260220T133004-unified-local-server-architecture.md  20260220T194713-filesystem-error-namespace.md  20260220T195800-flatten-extension-context.md  20260220T195900-clean-markdown-yaml-frontmatter-export.md  20260220T195900-deprecate-dynamic-api.md  20260220T195900-document-handle-api.md  20260220T195900-flatten-extension-exports.md  20260220T195900-sync-plugin-rest-endpoints.md  20260220T195900-sync-route-prefix-restructure.md  20260220T195900-unify-document-extension-shape.md  20260220T200000-extension-handle-passthrough.md  20260220T200000-flat-extension-type.md  20260220T200000-surgical-extension-await.md  20260220T200100 ai-plugin.md  20260220T201913-trim-document-context.md  20260221T044200-inline-run-extension-factories.md  20260221T161919-extract-cli-package.md  20260221T190252-ai-chat-tab.md  20260221T204200-documents-top-level-namespace.md  20260221T204200-rename-doc-binding-types.md  20260221T204300-remove-document-binding-dead-code.md  20260222T195645-network-topology-multi-server-architecture.md  20260222T195800-server-side-api-key-management.md  20260222T200800-server-endpoint-security.md  (+6 more)
(+114 files in other folders)
