[package]
name = "whispering"
version = "7.11.0"
description = "A Tauri App"
authors = ["you"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[package.metadata]
# Set minimum macOS version for C++17 filesystem support
cargo-target-macos-version = "10.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispering_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy_macro = "0.15"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-aptabase = "1"
enigo = "0.5.0"
cpal = "0.16.0"
tracing = "0.1.41"
thiserror = "2.0.12"
hound = "3.5"
lazy_static = "1.4"
tempfile = "3.8"
rubato = "0.15"
tauri-plugin-macos-permissions = "2.3.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
transcribe-rs = { version = "0.2.1", features = ["whisper", "parakeet", "moonshine"] }
regex = "1"
rayon = "1.10"
log = "0.4"
tauri-plugin-log = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys =  "0.1.3"
core-foundation-sys =  "0.8.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
# The following optimizations are disabled due to CoreAudio FFI crashes on macOS.
# These aggressive optimizations can cause segmentation faults when CPAL interfaces
# with CoreAudio, resulting in null pointer dereferences in HALDeviceList::GetData.
# 
# We may re-enable these in the future when:
# - CPAL fixes the underlying FFI safety issues
# - Rust's optimization passes better handle FFI boundaries
# - We implement our own audio backend that doesn't rely on CPAL
#
# For more information on Tauri app size optimization, see:
# https://v2.tauri.app/concept/size/
#
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
